--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -2,6 +2,8 @@
 
 .main-Header {
     background-image: url("../../assets/bg-001.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100vw;
     height: 663px;
 }
@@ -52,17 +54,39 @@ header {
     font-weight: bold;
 }
 
-.p1 {
+.mainContents {
+    margin-top: 230px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-left: 30px;
+    gap: 0 250px;
+}
 
+.text {
+    width: 441px;
+}
+
+.p1 {
+    margin-bottom: 9px;
     font-size: 14px;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     color: #ffff;
-    margin-bottom: 9px;
-    margin-left: 31px;
-    position: fixed;
-    top: 309px;
-    left: 30px
+    position: relative;
+    margin-left: 38px;
+}
+
+.p1::before {
+    content: "";
+    height: 1px;
+    width: 34px;
+    background-color: white;
+    display: block;
+    text-align: center;
+    position: absolute;
+    bottom: 6px;
+    left: -38px;
 }
 
 .text h1 {
@@ -70,11 +94,8 @@ header {
     font-size: 32px;
     font-weight: 700;
     color: #ffff;
-    width: 331px;
+    width: 82%;
     line-height: 35px;
-    margin-left: 31px;
-    position: fixed;
-    top: 336px
 }
 
 .p2 {
@@ -82,24 +103,15 @@ header {
     font-size: 12px;
     font-weight: 400;
     color: #ffff;
+    line-height: 15px;
     margin-top: 9px;
-    margin-left: 31px;
-    line-height: 35px;
-    position: fixed;
-    top: 465px;
 }
 
-.text {
-    width: 441px;
-}
 
 .BuyHere {
     width: 169px;
     height: 64px;
-    left: 1150px;
-    top: 379px;
     border-radius: 5px;
-    position: absolute;
     font-family: 'Inter', sans-serif;
     font-size: 14px;
     font-weight: 1000;
