--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100vw;
-    height: 663px;
+    height: 75vh;
 }
 
 .icon {
@@ -55,7 +55,7 @@ header {
 }
 
 .mainContents {
-    margin-top: 230px;
+    margin-top: 20%;
     display: flex;
     align-items: center;
     justify-content: space-around;
