--- a/src/Components/TextSapato/styles.css
+++ b/src/Components/TextSapato/styles.css
@@ -1,49 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
-.sub-text {
-    display: block;
-    width: 109px;
-    height: 18px;
+.sub-texto {
+    margin-top: 95px;
+    height: fit-content;
     font-size: 12px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     line-height: 14px;
     color: #000000;
-    position: absolute;
-    margin-left: 676px;
-    margin-top: 109px;
-    text-align: justify;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sub-texto h1 {
+    align-self: center;
+    font-weight: 600;
+    margin-bottom: 14px;
 }
 
 .sub-text1 {
-    display: block;
-    width: 427px;
-    height: 28px;
     font-size: 18px;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     line-height: 18px;
     color: #000000;
-    position: absolute;
-    margin-left: -165px;
-    margin-right: 109px;
     text-align: justify;
-    margin-top: 15px;
-
+    align-self: center;
+    margin-bottom: 2px;
 }
 
-.sub-text2{
-    display: block;
-        width: 427px;
-        height: 28px;
-        font-size: 14px;
-        font-family: 'Inter', sans-serif;
-        font-weight: 400;
-        line-height: 18px;
-        color: #000000;
-        position: absolute;
-        margin-left: -165px;
-        margin-right: 109px;
-        text-align: center;
-        margin-top: 50px;
+.sub-text2 {
+    font-size: 14px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    line-height: 18px;
+    color: #000000;
+    text-align: center;
+    max-width: 427px;
 }
