--- a/src/Components/TextSapato/styles.css
+++ b/src/Components/TextSapato/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Unna:wght@700&display=swap');
+
 
 .sub-texto {
     margin-top: 95px;
@@ -39,4 +41,34 @@
     color: #000000;
     text-align: center;
     max-width: 427px;
+}
+
+.sub-text3 {
+    font-family: 'Unna', sans-serif;
+    font-size: 12px;
+    margin-right: 1090px;
+    position: relative;
+    top: 490px;
+
+}
+
+.sub-text4 {
+    font-family: 'Inter', sans-serif;
+    height: fit-content;
+    font-size: 10px;
+    font-weight: 300;
+    position: relative;
+    top: 490px;
+    margin-right: 1145px;
+}
+
+.sub-text5 {
+    color: red;
+    font-family: 'Inter', sans-serif;
+    margin-right: 990px;
+    position: relative;
+    top: 475px;
+    font-size: 10px;
+
+
 }
