--- a/src/Components/TextSapato/styles.css
+++ b/src/Components/TextSapato/styles.css
@@ -48,7 +48,8 @@
     font-size: 12px;
     margin-right: 1090px;
     position: relative;
-    top: 490px;
+    font-weight: 400;
+    top: 530px;
 
 }
 
@@ -58,7 +59,7 @@
     font-size: 10px;
     font-weight: 300;
     position: relative;
-    top: 490px;
+    top: 533px;
     margin-right: 1145px;
 }
 
@@ -67,8 +68,27 @@
     font-family: 'Inter', sans-serif;
     margin-right: 990px;
     position: relative;
-    top: 475px;
+    top: 520px;
     font-size: 10px;
-
-
 }
+
+.sub-text6{
+    font-family: 'Unna';
+    height: fit-content;
+    font-size: 12px;
+    font-weight: 400;
+    position: relative;
+    top: 490px;
+    margin-right: -140px;
+}
+
+.sub-text7{
+    font-family: 'Inter', sans-serif;
+    height: fit-content;
+    font-size: 10px;
+    font-weight: 300;
+    position: relative;
+    top: 490px;
+    margin-right: -85px;
+}
+
