--- a/src/Components/TextSapato/styles.css
+++ b/src/Components/TextSapato/styles.css
@@ -49,7 +49,7 @@
     margin-right: 1090px;
     position: relative;
     font-weight: 400;
-    top: 530px;
+    top: 600px;
 
 }
 
@@ -59,7 +59,7 @@
     font-size: 10px;
     font-weight: 300;
     position: relative;
-    top: 533px;
+    top: 610px;
     margin-right: 1145px;
 }
 
@@ -68,17 +68,17 @@
     font-family: 'Inter', sans-serif;
     margin-right: 990px;
     position: relative;
-    top: 520px;
+    top: 595px;
     font-size: 10px;
 }
 
 .sub-text6{
-    font-family: 'Unna';
+    font-family: 'Unna',sans-serif;
     height: fit-content;
     font-size: 12px;
     font-weight: 400;
     position: relative;
-    top: 490px;
+    top: 560px;
     margin-right: -140px;
 }
 
@@ -88,7 +88,79 @@
     font-size: 10px;
     font-weight: 300;
     position: relative;
-    top: 490px;
+    top: 570px;
     margin-right: -85px;
 }
+
+.sub-text8{
+
+    font-family: 'Unna',sans-serif;
+    height: fit-content;
+    font-size: 12px;
+    font-weight: 400;
+    position: relative;
+    top: 970px;
+    margin-left: -1100px;
+
+
+}
+
+.sub-text9{
+
+    font-family: 'Inter', sans-serif;
+    height: fit-content;
+    font-size: 10px;
+    font-weight: 300;
+    position: relative;
+    top: 975px;
+    margin-left: -1145px;
+    
+}
+
+.sub-text10{
+    font-family: 'Inter', sans-serif;
+    color: red;
+    height: fit-content;
+    font-size: 10px;
+    font-weight: 300;
+    position: relative;
+    top: 962px;
+    margin-left: -990px;
+}
+
+.sub-text11{
+    font-family: 'Unna', sans-serif;
+    height: fit-content;
+    font-size: 12px;
+    font-weight: 400;
+    position: relative;
+    top: 930px;
+    margin-left: 125px;
+
+
+}
+
+.sub-text12{
+    font-family: 'Inter', sans-serif;
+    height: fit-content;
+    font-size: 10px;
+    font-weight: 300;
+    position: relative;
+    top: 935px;
+    margin-left: 65px;
+    
+}
+
+.sub-text13{
+    color: red;
+    font-family: 'Inter', sans-serif;
+    height: fit-content;
+    font-size: 10px;
+    font-weight: 300;
+    position: relative;
+    top: 920px;
+    margin-left: 220px;
+    
+}
+
 
