--- a/src/Components/Section2/styles.css
+++ b/src/Components/Section2/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 .main-section {
     background-image: url("../../assets/rectangule 1.png");
     background-repeat: no-repeat;
@@ -13,7 +15,7 @@
     top: 62px;
     left: 11.7%;
     width: 350px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
@@ -22,7 +24,7 @@
 }
 
 .main-section .text .title {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -30,10 +32,23 @@
     text-align: center;
     color: #000000;
     margin-bottom: 10px;
+    margin-right: 60px;
+}
+
+.main-section .text .title::before{
+    content: "";
+    height: 1px;
+    width: 60px;
+    background-color: rgb(0, 0, 0);
+    display: block;
+    text-align: center;
+    position: absolute;
+    top: 8px;
+    right: 290px;
 }
 
 .main-section .text .offer {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
@@ -43,7 +58,7 @@
 }
 
 .main-section .text .description {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
@@ -52,7 +67,7 @@
 }
 
 .main-section .text .description span {
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 12px;
