--- a/src/Components/TextSection/styles.css
+++ b/src/Components/TextSection/styles.css
@@ -10,75 +10,41 @@
 }
 
 .section2 {
-    font-family: 'Inter', sans-serif;
-    font-size: 12px;
-    font-weight: 300px;
-    position: relative;
-
-}
-
-.section3 {
-    font-family: 'Inter', sans-serif;
-    font-size: 12px;
-    font-weight: 300px;
-    position: relative;
-    bottom: -15px;
-    margin-left: -337px;
-
-}
-
-.section4 {
-    font-family: 'Inter', sans-serif;
-    font-size: 12px;
-    font-weight: 300px;
-    position: relative;
-    bottom: -15px;
-    margin-left: 5px;
-    color: red;
-
-}
-
-.section5 {
-    font-family: 'Inter', sans-serif;
-    font-size: 12px;
-    font-weight: 300px;
-    position: relative;
-    bottom: -15px;
-    margin-left: 5px;
-}
-
-.section6 {
-    font-family: 'Inter', sans-serif;
-    font-size: 12px;
-    font-weight: 500px;
-    position: relative;
-    bottom: -15px;
-    margin-left: 5px;
-    color: red;
-}
-
-.section7 {
-    font-family: 'Inter', sans-serif;
-    font-size: 14px;
-    font-weight: 600;
-    position: relative;
-    bottom: 80px;
-    margin-left: -250px;
-
-}
-
-.section8 {
     font-family: 'Fira Sans', sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     top: 580px;
     position: relative;
     font-size: 14px;
     text-align: justify;
     left: 575px;
+}
+
+.section2::before{
+    content: "";
+    height: 1px;
+    width: 54px;
+    background-color: rgb(0, 0, 0);
+    display: block;
+    text-align: center;
+    position: absolute;
+    top: 8px;
+    right: 90px;
 
 }
 
-.section9 {
+.section2::after{
+    content: "";
+    height: 1px;
+    width: 54px;
+    background-color: rgb(0, 0, 0);
+    display: block;
+    text-align: center;
+    position: absolute;
+    top: 8px;
+    right: -80px;
+
+}
+.section3 {
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     position: absolute;
@@ -88,7 +54,7 @@
     text-align: justify;
 }
 
-.section10 {
+.section4 {
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     position: absolute;
