--- a/src/Components/TextSection2/styles.css
+++ b/src/Components/TextSection2/styles.css
@@ -2,23 +2,29 @@
 
 .text-1 {
     color: rgb(255, 255, 255);
-    display: flex;
     position: relative;
     top: 420px;
     font-weight: 600;
-    margin-right: 750px;
+    right: -250px;
     font-size: 16px;
 }
 
 .text-2 {
     font-family: 'Inter', sans-serif;
-    position: relative;
+    position: absolute;
     font-weight: 400;
-    color: white;
-    bottom: -20px;
-    display: flex;
-    margin-right: 600px;
+    color: rgb(255, 255, 255);
+    bottom: -30px;
+    right: 1800px;
     font-size: 12px;
 
 
+}
+
+.text-3{
+    font-family: 'Inter', sans-serif;
+    color: red;
+    font-weight: 400;
+    font-size: 12px;
+    position: relative;
 }
