--- a/src/Components/BlogSection/styles.css
+++ b/src/Components/BlogSection/styles.css
@@ -1,3 +1,8 @@
 .card{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1200px;
     filter: drop-shadow( 0px 4px 50px 0px #5555554D);
 }
